implemented: a few custom exceptions + retry z with exponential backoff + timeout (completing resilience pack) + overall small adjustments